Bug 125201 - Scrolling down on Touchpad erratic (6.2.3.2 on Ubuntu 18.04)
Summary: Scrolling down on Touchpad erratic (6.2.3.2 on Ubuntu 18.04)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL: https://www.allassignmenthelp.com/uk/
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
: 126509 (view as bug list)
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2019-05-10 08:22 UTC by Gerd
Modified: 2022-04-20 03:40 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerd 2019-05-10 08:22:28 UTC
Description:
Scrolling down with the touchpad on a Dell 9380 (2019 XPS 13 Developer Edition) is very erratic. It will move down (sometime), but mostly it will just jump around in an undesired fashion.

I read about this in other bug reports, there was claimed it had been fixed, apparently this is not the case.

I have the following configuration:

Dell XPS 13 (9380) with Ubuntu 18.04 (Dev. Edition, came with Ubuntu). The installed Libreoffice (6.0.7) had the problem, so decided to add the ppa and install the lastest version from the fresh-ppa, this gave me 6.2.3.2.

The touchpad is configured to reverse scrolling (like on a MacBook) and I also added these lines to a startup-script to smooth out scrolling in virtually all of the other apps on the system, especially browsers:

xinput --set-prop 10 "Synaptics Finger" 70 90 257
xinput --set-prop 15 "Synaptics Finger" 70 90 257

xinput --set-prop 10 "Synaptics Scrolling Distance" -100 100
xinput --set-prop 15 "Synaptics Scrolling Distance" -100 100

This improved scrolling considerably. I doubt these are the reason for the mishaps in Libreoffice, since scrolling up with the touchpad seems unaffected.

Scrolling with a mousewheel, as stated in other bug reports, works fine.




Steps to Reproduce:
1. open spreadsheet in calc
2. scroll using touchpad
3.

Actual Results:
Scrolling is erratic in down-direction, up is fine

Expected Results:
Scrolling should work as expected (smooth without erratic jumping around) in both directions


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 Usama 2019-05-25 05:43:33 UTC
Hello Gerd,

Thank you for reporting the bug. Unfortunately I can't reproduce in master version.
Does this issue happen when you scroll down on empty file or on another system with similar LO version?

Also if you have time could you please try to reproduce it with the daily build from https://www.libreoffice.org/download/appimage/
You can install it along sidethe standard version.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' after providing the requested information and if the bug is still present in the master build

Tested on:
Version: 6.3.0.0.alpha1+
Build ID: 40e2a0d7039eee9c5377996da3949680903e1016
CPU threads: 4; OS: Linux 4.9; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-22_13:55:35
Locale: hu-HU (en_GB.utf8); UI-Language: en-US
Calc: threaded
Comment 2 .san 2019-05-25 13:43:57 UTC
I can confirm this issue with the daily appimage build (LibreOfficeDev-6.3.0.0.alpha1_2019-05-22-x86_64.AppImage). 

Hardware: 
- Dell XPS 13 9360

Linux Distribution 
- Arch (fully up-to-date)

Libre Office version:
- Version: 6.2.4.2.0+
- Build ID: 6.2.4-1

Other (potential) relevant notes:
- I see this erratic behavior on both scrolling up and down with the trackpad. 
- I don't have it set with inverse mouse but have a similar notebook. 
- I don't have xinput installed and rely on the libinput configuration. 
- It works as intended in all KDE apps (including multi finger tracking)
- I use two finger swiping (aka gestures) for scrolling up and down on the trackpad.
Comment 3 Henrique SantAnna 2019-06-04 00:07:57 UTC
I can confirm it affects VCL: kde5; and VCL: qt5; but does not affect VCL: gtk3

It is reproducible with touch-pad scrolling, but is not with external usb mouse scrolling.


Tested with:

Version: 6.3.0.0.alpha1+
Build ID: 77ae0abe21f672cf4b7d2e069f1d40d20edc49a7
CPU threads: 4; OS: Linux 5.1; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-31_15:33:33
Locale: pt-BR (pt_BR.UTF-8); UI-Language: en-US
Calc: threaded

And with:

Versão: 6.2.4.2.0+
ID de compilação: 6.2.4-1
Threads da CPU:4; SO:Linux 5.1; Realizador da interface: GL; VCL: kde5; 
Local: pt-BR (pt_BR.UTF-8); Idioma de IU: pt-BR
Calc: threaded


The same behavior, with the fresh and the daily versions.
Comment 4 Henrique SantAnna 2019-06-04 14:33:33 UTC
sudo libinput list-devices

Output:

Device:           SynPS/2 Synaptics TouchPad
Kernel:           /dev/input/event6
Group:            10
Seat:             seat0, default
Size:             117x65mm
Capabilities:     pointer gesture
Tap-to-click:     disabled
Tap-and-drag:     enabled
Tap drag lock:    disabled
Left-handed:      disabled
Nat.scrolling:    disabled
Middle emulation: disabled
Calibration:      n/a
Scroll methods:   *two-finger edge 
Click methods:    *button-areas clickfinger 
Disable-w-typing: enabled
Accel profiles:   none
Rotation:         n/a
Comment 5 Xisco Faulí 2019-06-06 16:36:24 UTC
*** Bug 125144 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2019-06-06 18:25:24 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1d959beba1cfef5fde035a4a74ee4611e7a04869%5E%21

tdf#125201 fix QWheelEvent angleDelta() handling

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-06-07 01:09:14 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/06c92cf8ff1fa6c72d20579d54eb75b5fc9d25e6%5E%21

tdf#125201 fix QWheelEvent angleDelta() handling

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Henrique SantAnna 2019-06-11 12:40:18 UTC
Just for future reference and to identify possible duplicates, I may add that this bug:

- Affects both, touchpad two finger scrolling and touchpad side scrolling.

- Like other already said before, the erratic behavior could be specially identified when scrolling UP, and may not be identified while scrolling down.

- This is a touchpad only thing, the bug does seems to not affect mouse wheel scrolling.
Comment 9 Jan-Marek Glogowski 2019-07-22 19:53:21 UTC
*** Bug 126509 has been marked as a duplicate of this bug. ***
Comment 10 Gunter Ohrner 2019-07-22 21:49:43 UTC
Will there be a backport to 6.2.5?

As I understood, this is currently the latest stable release and will still be offered in parallel to 6.3 once this gets stable, as a "more conservative", i.e. even "more stable", release, especially for business users.

However using it on a notebook is actually pretty annoying with the current scrolling behaviour also - or maybe especially - if you're a business user...
Comment 11 Eli Leo 2021-03-19 05:38:26 UTC Comment hidden (spam)
Comment 12 branden lucifier 2021-06-24 15:48:56 UTC Comment hidden (spam)
Comment 13 jnd hotels 2021-12-22 07:08:10 UTC Comment hidden (spam)
Comment 14 nicolhill 2022-01-08 18:38:35 UTC Comment hidden (spam)
Comment 15 luna beth 2022-02-09 06:43:14 UTC Comment hidden (spam)
Comment 16 okljf 2022-04-19 20:57:28 UTC Comment hidden (spam)